# mcp-security-scan

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml  server.json  smithery.yaml
mcp_security_scan/: __init__.py  cli.py  patterns.py  scan.py
tests/: test_new_categories.py
