[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-security-scan"
version = "0.1.0"
description = "Security scanner for MCP servers — finds hardcoded secrets, unsafe exec, missing auth"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AgentGraph", email = "kenne@agentgraph.co"},
]
keywords = ["mcp", "security", "scanner", "ai-agents", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.scripts]
mcp-security-scan = "mcp_security_scan.cli:main"

[project.urls]
Homepage = "https://github.com/agentgraph-co/mcp-security-scan"
Repository = "https://github.com/agentgraph-co/mcp-security-scan"
Issues = "https://github.com/agentgraph-co/mcp-security-scan/issues"

[tool.ruff]
line-length = 100
target-version = "py39"
